bugfixes for reset password and post api